add theme backend extension
