# pkg/server/server.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
 // 	protoc-gen-go v1.28.1
-// 	protoc        v4.22.2
+// 	protoc        v4.25.1
 // source: pkg/server/server.proto
 
 package server
@@ -4301,27 +4301,38 @@ var file_pkg_server_server_proto_rawDesc = []byte{
 	0x68, 0x43, 0x61, 0x73, 0x65, 0x1a, 0x14, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x43,
 	0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x22, 0x20, 0x82, 0xd3, 0xe4,
 	0x93, 0x02, 0x1a, 0x22, 0x15, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x65, 0x78, 0x74,
-	0x65, 0x6e, 0x73, 0x69, 0x6f, 0x6e, 0x2f, 0x72, 0x75, 0x6e, 0x3a, 0x01, 0x2a, 0x32, 0xa0, 0x01,
-	0x0a, 0x04, 0x4d, 0x6f, 0x63, 0x6b, 0x12, 0x4b, 0x0a, 0x06, 0x52, 0x65, 0x6c, 0x6f, 0x61, 0x64,
-	0x12, 0x12, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x4d, 0x6f, 0x63, 0x6b, 0x43, 0x6f,
-	0x6e, 0x66, 0x69, 0x67, 0x1a, 0x0d, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x45, 0x6d,
-	0x70, 0x74, 0x79, 0x22, 0x1e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x18, 0x22, 0x13, 0x2f, 0x61, 0x70,
-	0x69, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x63, 0x6b, 0x2f, 0x72, 0x65, 0x6c, 0x6f, 0x61, 0x64,
-	0x3a, 0x01, 0x2a, 0x12, 0x4b, 0x0a, 0x09, 0x47, 0x65, 0x74, 0x43, 0x6f, 0x6e, 0x66, 0x69, 0x67,
-	0x12, 0x0d, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a,
+	0x65, 0x6e, 0x73, 0x69, 0x6f, 0x6e, 0x2f, 0x72, 0x75, 0x6e, 0x3a, 0x01, 0x2a, 0x32, 0xac, 0x01,
+	0x0a, 0x0e, 0x54, 0x68, 0x65, 0x6d, 0x65, 0x45, 0x78, 0x74, 0x65, 0x6e, 0x73, 0x69, 0x6f, 0x6e,
+	0x12, 0x46, 0x0a, 0x09, 0x47, 0x65, 0x74, 0x54, 0x68, 0x65, 0x6d, 0x65, 0x73, 0x12, 0x0d, 0x2e,
+	0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x12, 0x2e, 0x73,
+	0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x53, 0x69, 0x6d, 0x70, 0x6c, 0x65, 0x4c, 0x69, 0x73, 0x74,
+	0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x10, 0x12, 0x0e, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76,
+	0x31, 0x2f, 0x74, 0x68, 0x65, 0x6d, 0x65, 0x73, 0x12, 0x52, 0x0a, 0x08, 0x47, 0x65, 0x74, 0x54,
+	0x68, 0x65, 0x6d, 0x65, 0x12, 0x12, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x53, 0x69,
+	0x6d, 0x70, 0x6c, 0x65, 0x4e, 0x61, 0x6d, 0x65, 0x1a, 0x14, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65,
+	0x72, 0x2e, 0x43, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x22, 0x1c,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x12, 0x14, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f,
+	0x74, 0x68, 0x65, 0x6d, 0x65, 0x2f, 0x7b, 0x6e, 0x61, 0x6d, 0x65, 0x7d, 0x32, 0xa0, 0x01, 0x0a,
+	0x04, 0x4d, 0x6f, 0x63, 0x6b, 0x12, 0x4b, 0x0a, 0x06, 0x52, 0x65, 0x6c, 0x6f, 0x61, 0x64, 0x12,
 	0x12, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x4d, 0x6f, 0x63, 0x6b, 0x43, 0x6f, 0x6e,
-	0x66, 0x69, 0x67, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x15, 0x12, 0x13, 0x2f, 0x61, 0x70,
-	0x69, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x63, 0x6b, 0x2f, 0x63, 0x6f, 0x6e, 0x66, 0x69, 0x67,
-	0x32, 0x60, 0x0a, 0x0a, 0x44, 0x61, 0x74, 0x61, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x12, 0x52,
-	0x0a, 0x05, 0x51, 0x75, 0x65, 0x72, 0x79, 0x12, 0x11, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72,
-	0x2e, 0x44, 0x61, 0x74, 0x61, 0x51, 0x75, 0x65, 0x72, 0x79, 0x1a, 0x17, 0x2e, 0x73, 0x65, 0x72,
-	0x76, 0x65, 0x72, 0x2e, 0x44, 0x61, 0x74, 0x61, 0x51, 0x75, 0x65, 0x72, 0x79, 0x52, 0x65, 0x73,
-	0x75, 0x6c, 0x74, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x22, 0x12, 0x2f, 0x61, 0x70,
-	0x69, 0x2f, 0x76, 0x31, 0x2f, 0x64, 0x61, 0x74, 0x61, 0x2f, 0x71, 0x75, 0x65, 0x72, 0x79, 0x3a,
-	0x01, 0x2a, 0x42, 0x2e, 0x5a, 0x2c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d,
-	0x2f, 0x6c, 0x69, 0x6e, 0x75, 0x78, 0x73, 0x75, 0x72, 0x65, 0x6e, 0x2f, 0x61, 0x70, 0x69, 0x2d,
-	0x74, 0x65, 0x73, 0x74, 0x69, 0x6e, 0x67, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x73, 0x65, 0x72, 0x76,
-	0x65, 0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x66, 0x69, 0x67, 0x1a, 0x0d, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x45, 0x6d, 0x70,
+	0x74, 0x79, 0x22, 0x1e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x18, 0x22, 0x13, 0x2f, 0x61, 0x70, 0x69,
+	0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x63, 0x6b, 0x2f, 0x72, 0x65, 0x6c, 0x6f, 0x61, 0x64, 0x3a,
+	0x01, 0x2a, 0x12, 0x4b, 0x0a, 0x09, 0x47, 0x65, 0x74, 0x43, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x12,
+	0x0d, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x12,
+	0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x4d, 0x6f, 0x63, 0x6b, 0x43, 0x6f, 0x6e, 0x66,
+	0x69, 0x67, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x15, 0x12, 0x13, 0x2f, 0x61, 0x70, 0x69,
+	0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x6f, 0x63, 0x6b, 0x2f, 0x63, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x32,
+	0x60, 0x0a, 0x0a, 0x44, 0x61, 0x74, 0x61, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x12, 0x52, 0x0a,
+	0x05, 0x51, 0x75, 0x65, 0x72, 0x79, 0x12, 0x11, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e,
+	0x44, 0x61, 0x74, 0x61, 0x51, 0x75, 0x65, 0x72, 0x79, 0x1a, 0x17, 0x2e, 0x73, 0x65, 0x72, 0x76,
+	0x65, 0x72, 0x2e, 0x44, 0x61, 0x74, 0x61, 0x51, 0x75, 0x65, 0x72, 0x79, 0x52, 0x65, 0x73, 0x75,
+	0x6c, 0x74, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x22, 0x12, 0x2f, 0x61, 0x70, 0x69,
+	0x2f, 0x76, 0x31, 0x2f, 0x64, 0x61, 0x74, 0x61, 0x2f, 0x71, 0x75, 0x65, 0x72, 0x79, 0x3a, 0x01,
+	0x2a, 0x42, 0x2e, 0x5a, 0x2c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f,
+	0x6c, 0x69, 0x6e, 0x75, 0x78, 0x73, 0x75, 0x72, 0x65, 0x6e, 0x2f, 0x61, 0x70, 0x69, 0x2d, 0x74,
+	0x65, 0x73, 0x74, 0x69, 0x6e, 0x67, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65,
+	0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -4500,64 +4511,68 @@ var file_pkg_server_server_proto_depIdxs = []int32{
 	43,  // 98: server.Runner.UpdateSecret:input_type -> server.Secret
 	45,  // 99: server.Runner.PProf:input_type -> server.PProfRequest
 	8,   // 100: server.RunnerExtension.Run:input_type -> server.TestSuiteWithCase
-	49,  // 101: server.Mock.Reload:input_type -> server.MockConfig
-	48,  // 102: server.Mock.GetConfig:input_type -> server.Empty
-	52,  // 103: server.DataServer.Query:input_type -> server.DataQuery
-	17,  // 104: server.Runner.Run:output_type -> server.TestResult
-	17,  // 105: server.Runner.RunTestSuite:output_type -> server.TestResult
-	0,   // 106: server.Runner.GetSuites:output_type -> server.Suites
-	19,  // 107: server.Runner.CreateTestSuite:output_type -> server.HelloReply
-	38,  // 108: server.Runner.ImportTestSuite:output_type -> server.CommonResult
-	7,   // 109: server.Runner.GetTestSuite:output_type -> server.TestSuite
-	19,  // 110: server.Runner.UpdateTestSuite:output_type -> server.HelloReply
-	19,  // 111: server.Runner.DeleteTestSuite:output_type -> server.HelloReply
-	19,  // 112: server.Runner.DuplicateTestSuite:output_type -> server.HelloReply
-	19,  // 113: server.Runner.RenameTestSuite:output_type -> server.HelloReply
-	20,  // 114: server.Runner.GetTestSuiteYaml:output_type -> server.YamlData
-	21,  // 115: server.Runner.ListTestCase:output_type -> server.Suite
-	30,  // 116: server.Runner.RunTestCase:output_type -> server.TestCaseResult
-	17,  // 117: server.Runner.BatchRun:output_type -> server.TestResult
-	24,  // 118: server.Runner.GetTestCase:output_type -> server.TestCase
-	19,  // 119: server.Runner.CreateTestCase:output_type -> server.HelloReply
-	19,  // 120: server.Runner.UpdateTestCase:output_type -> server.HelloReply
-	19,  // 121: server.Runner.DeleteTestCase:output_type -> server.HelloReply
-	19,  // 122: server.Runner.DuplicateTestCase:output_type -> server.HelloReply
-	19,  // 123: server.Runner.RenameTestCase:output_type -> server.HelloReply
-	23,  // 124: server.Runner.GetSuggestedAPIs:output_type -> server.TestCases
-	2,   // 125: server.Runner.GetHistorySuites:output_type -> server.HistorySuites
-	18,  // 126: server.Runner.GetHistoryTestCaseWithResult:output_type -> server.HistoryTestResult
-	25,  // 127: server.Runner.GetHistoryTestCase:output_type -> server.HistoryTestCase
-	19,  // 128: server.Runner.DeleteHistoryTestCase:output_type -> server.HelloReply
-	19,  // 129: server.Runner.DeleteAllHistoryTestCase:output_type -> server.HelloReply
-	26,  // 130: server.Runner.GetTestCaseAllHistory:output_type -> server.HistoryTestCases
-	39,  // 131: server.Runner.ListCodeGenerator:output_type -> server.SimpleList
-	38,  // 132: server.Runner.GenerateCode:output_type -> server.CommonResult
-	38,  // 133: server.Runner.HistoryGenerateCode:output_type -> server.CommonResult
-	39,  // 134: server.Runner.ListConverter:output_type -> server.SimpleList
-	38,  // 135: server.Runner.ConvertTestSuite:output_type -> server.CommonResult
-	32,  // 136: server.Runner.PopularHeaders:output_type -> server.Pairs
-	32,  // 137: server.Runner.FunctionsQuery:output_type -> server.Pairs
-	32,  // 138: server.Runner.FunctionsQueryStream:output_type -> server.Pairs
-	50,  // 139: server.Runner.GetVersion:output_type -> server.Version
-	19,  // 140: server.Runner.Sample:output_type -> server.HelloReply
-	47,  // 141: server.Runner.DownloadResponseFile:output_type -> server.FileData
-	36,  // 142: server.Runner.GetStoreKinds:output_type -> server.StoreKinds
-	34,  // 143: server.Runner.GetStores:output_type -> server.Stores
-	35,  // 144: server.Runner.CreateStore:output_type -> server.Store
-	35,  // 145: server.Runner.UpdateStore:output_type -> server.Store
-	35,  // 146: server.Runner.DeleteStore:output_type -> server.Store
-	44,  // 147: server.Runner.VerifyStore:output_type -> server.ExtensionStatus
-	42,  // 148: server.Runner.GetSecrets:output_type -> server.Secrets
-	38,  // 149: server.Runner.CreateSecret:output_type -> server.CommonResult
-	38,  // 150: server.Runner.DeleteSecret:output_type -> server.CommonResult
-	38,  // 151: server.Runner.UpdateSecret:output_type -> server.CommonResult
-	46,  // 152: server.Runner.PProf:output_type -> server.PProfData
-	38,  // 153: server.RunnerExtension.Run:output_type -> server.CommonResult
-	48,  // 154: server.Mock.Reload:output_type -> server.Empty
-	49,  // 155: server.Mock.GetConfig:output_type -> server.MockConfig
-	53,  // 156: server.DataServer.Query:output_type -> server.DataQueryResult
-	104, // [104:157] is the sub-list for method output_type
-	51,  // [51:104] is the sub-list for method input_type
+	48,  // 101: server.ThemeExtension.GetThemes:input_type -> server.Empty
+	40,  // 102: server.ThemeExtension.GetTheme:input_type -> server.SimpleName
+	49,  // 103: server.Mock.Reload:input_type -> server.MockConfig
+	48,  // 104: server.Mock.GetConfig:input_type -> server.Empty
+	52,  // 105: server.DataServer.Query:input_type -> server.DataQuery
+	17,  // 106: server.Runner.Run:output_type -> server.TestResult
+	17,  // 107: server.Runner.RunTestSuite:output_type -> server.TestResult
+	0,   // 108: server.Runner.GetSuites:output_type -> server.Suites
+	19,  // 109: server.Runner.CreateTestSuite:output_type -> server.HelloReply
+	38,  // 110: server.Runner.ImportTestSuite:output_type -> server.CommonResult
+	7,   // 111: server.Runner.GetTestSuite:output_type -> server.TestSuite
+	19,  // 112: server.Runner.UpdateTestSuite:output_type -> server.HelloReply
+	19,  // 113: server.Runner.DeleteTestSuite:output_type -> server.HelloReply
+	19,  // 114: server.Runner.DuplicateTestSuite:output_type -> server.HelloReply
+	19,  // 115: server.Runner.RenameTestSuite:output_type -> server.HelloReply
+	20,  // 116: server.Runner.GetTestSuiteYaml:output_type -> server.YamlData
+	21,  // 117: server.Runner.ListTestCase:output_type -> server.Suite
+	30,  // 118: server.Runner.RunTestCase:output_type -> server.TestCaseResult
+	17,  // 119: server.Runner.BatchRun:output_type -> server.TestResult
+	24,  // 120: server.Runner.GetTestCase:output_type -> server.TestCase
+	19,  // 121: server.Runner.CreateTestCase:output_type -> server.HelloReply
+	19,  // 122: server.Runner.UpdateTestCase:output_type -> server.HelloReply
+	19,  // 123: server.Runner.DeleteTestCase:output_type -> server.HelloReply
+	19,  // 124: server.Runner.DuplicateTestCase:output_type -> server.HelloReply
+	19,  // 125: server.Runner.RenameTestCase:output_type -> server.HelloReply
+	23,  // 126: server.Runner.GetSuggestedAPIs:output_type -> server.TestCases
+	2,   // 127: server.Runner.GetHistorySuites:output_type -> server.HistorySuites
+	18,  // 128: server.Runner.GetHistoryTestCaseWithResult:output_type -> server.HistoryTestResult
+	25,  // 129: server.Runner.GetHistoryTestCase:output_type -> server.HistoryTestCase
+	19,  // 130: server.Runner.DeleteHistoryTestCase:output_type -> server.HelloReply
+	19,  // 131: server.Runner.DeleteAllHistoryTestCase:output_type -> server.HelloReply
+	26,  // 132: server.Runner.GetTestCaseAllHistory:output_type -> server.HistoryTestCases
+	39,  // 133: server.Runner.ListCodeGenerator:output_type -> server.SimpleList
+	38,  // 134: server.Runner.GenerateCode:output_type -> server.CommonResult
+	38,  // 135: server.Runner.HistoryGenerateCode:output_type -> server.CommonResult
+	39,  // 136: server.Runner.ListConverter:output_type -> server.SimpleList
+	38,  // 137: server.Runner.ConvertTestSuite:output_type -> server.CommonResult
+	32,  // 138: server.Runner.PopularHeaders:output_type -> server.Pairs
+	32,  // 139: server.Runner.FunctionsQuery:output_type -> server.Pairs
+	32,  // 140: server.Runner.FunctionsQueryStream:output_type -> server.Pairs
+	50,  // 141: server.Runner.GetVersion:output_type -> server.Version
+	19,  // 142: server.Runner.Sample:output_type -> server.HelloReply
+	47,  // 143: server.Runner.DownloadResponseFile:output_type -> server.FileData
+	36,  // 144: server.Runner.GetStoreKinds:output_type -> server.StoreKinds
+	34,  // 145: server.Runner.GetStores:output_type -> server.Stores
+	35,  // 146: server.Runner.CreateStore:output_type -> server.Store
+	35,  // 147: server.Runner.UpdateStore:output_type -> server.Store
+	35,  // 148: server.Runner.DeleteStore:output_type -> server.Store
+	44,  // 149: server.Runner.VerifyStore:output_type -> server.ExtensionStatus
+	42,  // 150: server.Runner.GetSecrets:output_type -> server.Secrets
+	38,  // 151: server.Runner.CreateSecret:output_type -> server.CommonResult
+	38,  // 152: server.Runner.DeleteSecret:output_type -> server.CommonResult
+	38,  // 153: server.Runner.UpdateSecret:output_type -> server.CommonResult
+	46,  // 154: server.Runner.PProf:output_type -> server.PProfData
+	38,  // 155: server.RunnerExtension.Run:output_type -> server.CommonResult
+	39,  // 156: server.ThemeExtension.GetThemes:output_type -> server.SimpleList
+	38,  // 157: server.ThemeExtension.GetTheme:output_type -> server.CommonResult
+	48,  // 158: server.Mock.Reload:output_type -> server.Empty
+	49,  // 159: server.Mock.GetConfig:output_type -> server.MockConfig
+	53,  // 160: server.DataServer.Query:output_type -> server.DataQueryResult
+	106, // [106:161] is the sub-list for method output_type
+	51,  // [51:106] is the sub-list for method input_type
 	51,  // [51:51] is the sub-list for extension type_name
 	51,  // [51:51] is the sub-list for extension extendee
 	0,   // [0:51] is the sub-list for field type_name
@@ -5238,7 +5253,7 @@ func file_pkg_server_server_proto_init() {
 			NumEnums:      0,
 			NumMessages:   58,
 			NumExtensions: 0,
-			NumServices:   4,
+			NumServices:   5,
 		},
 		GoTypes:           file_pkg_server_server_proto_goTypes,
 		DependencyIndexes: file_pkg_server_server_proto_depIdxs,
