# pkg/server/server_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.2.0
-// - protoc             v4.22.2
+// - protoc             v4.25.1
 // source: pkg/server/server.proto
 
 package server
@@ -2031,6 +2031,128 @@ var RunnerExtension_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Run",
 			Handler:    _RunnerExtension_Run_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "pkg/server/server.proto",
+}
+
+// ThemeExtensionClient is the client API for ThemeExtension service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type ThemeExtensionClient interface {
+	GetThemes(ctx context.Context, in *Empty, opts ...grpc.CallOption) (*SimpleList, error)
+	GetTheme(ctx context.Context, in *SimpleName, opts ...grpc.CallOption) (*CommonResult, error)
+}
+
+type themeExtensionClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewThemeExtensionClient(cc grpc.ClientConnInterface) ThemeExtensionClient {
+	return &themeExtensionClient{cc}
+}
+
+func (c *themeExtensionClient) GetThemes(ctx context.Context, in *Empty, opts ...grpc.CallOption) (*SimpleList, error) {
+	out := new(SimpleList)
+	err := c.cc.Invoke(ctx, "/server.ThemeExtension/GetThemes", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *themeExtensionClient) GetTheme(ctx context.Context, in *SimpleName, opts ...grpc.CallOption) (*CommonResult, error) {
+	out := new(CommonResult)
+	err := c.cc.Invoke(ctx, "/server.ThemeExtension/GetTheme", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ThemeExtensionServer is the server API for ThemeExtension service.
+// All implementations must embed UnimplementedThemeExtensionServer
+// for forward compatibility
+type ThemeExtensionServer interface {
+	GetThemes(context.Context, *Empty) (*SimpleList, error)
+	GetTheme(context.Context, *SimpleName) (*CommonResult, error)
+	mustEmbedUnimplementedThemeExtensionServer()
+}
+
+// UnimplementedThemeExtensionServer must be embedded to have forward compatible implementations.
+type UnimplementedThemeExtensionServer struct {
+}
+
+func (UnimplementedThemeExtensionServer) GetThemes(context.Context, *Empty) (*SimpleList, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetThemes not implemented")
+}
+func (UnimplementedThemeExtensionServer) GetTheme(context.Context, *SimpleName) (*CommonResult, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetTheme not implemented")
+}
+func (UnimplementedThemeExtensionServer) mustEmbedUnimplementedThemeExtensionServer() {}
+
+// UnsafeThemeExtensionServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ThemeExtensionServer will
+// result in compilation errors.
+type UnsafeThemeExtensionServer interface {
+	mustEmbedUnimplementedThemeExtensionServer()
+}
+
+func RegisterThemeExtensionServer(s grpc.ServiceRegistrar, srv ThemeExtensionServer) {
+	s.RegisterService(&ThemeExtension_ServiceDesc, srv)
+}
+
+func _ThemeExtension_GetThemes_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ThemeExtensionServer).GetThemes(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/server.ThemeExtension/GetThemes",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ThemeExtensionServer).GetThemes(ctx, req.(*Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ThemeExtension_GetTheme_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(SimpleName)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ThemeExtensionServer).GetTheme(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/server.ThemeExtension/GetTheme",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ThemeExtensionServer).GetTheme(ctx, req.(*SimpleName))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// ThemeExtension_ServiceDesc is the grpc.ServiceDesc for ThemeExtension service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var ThemeExtension_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "server.ThemeExtension",
+	HandlerType: (*ThemeExtensionServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetThemes",
+			Handler:    _ThemeExtension_GetThemes_Handler,
+		},
+		{
+			MethodName: "GetTheme",
+			Handler:    _ThemeExtension_GetTheme_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
